--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -23,6 +23,19 @@
   color: #ffffff;
 }
 
+.submitButton {
+  background-color: #6767ee;
+  border: none;
+  border-radius: 9px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 1rem;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
