--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -86,3 +86,95 @@ span {
     transform: rotate(360deg);
   }
 }
+
+/* The following is for the range input styling */
+input[type=range] {
+  height: 20px;
+  background-color: #323d53;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 60%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 60%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #9ACBE3;
+  border-radius: 18px;
+  border: 0px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #9497FF;
+  border: 0px solid #2497E3;
+  height: 14px;
+  width: 14px;
+  border-radius: 26px;
+  background: #16161d;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -4px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #9ACBE3;
+}
+input[type=range]::-moz-range-track {
+  width: 60%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #9ACBE3;
+  border-radius: 18px;
+  border: 0px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #9497FF;
+  border: 0px solid #2497E3;
+  height: 14px;
+  width: 14px;
+  border-radius: 26px;
+  background: #16161d;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 60%;
+  height: 6px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #9ACBE3;
+  border: 0px solid #000000;
+  border-radius: 36px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-fill-upper {
+  background: #9ACBE3;
+  border: 0px solid #000000;
+  border-radius: 36px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 0px 0px 0px #9497FF;
+  border: 0px solid #2497E3;
+  height: 14px;
+  width: 14px;
+  border-radius: 26px;
+  background: #16161d;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #9ACBE3;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #9ACBE3;
+}
